🏁Finished contact.html

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ nav {
     border-bottom-right-radius: 12px;
 }
 
-.navbar a, button, input {
+.navbar a, button, input{
     border-color: rgba(255,255,255,0.2);
     border-style: solid;
     border-width: 1px;
@@ -174,4 +174,28 @@ nav {
     word-break: break-word;
     padding-top: 3rem;
     padding-left: 15rem;
+}
+
+.contact input, select, textarea {
+    border-color: rgba(255,255,255,0.2);
+    border-style: solid;
+    border-width: 1px;
+    border-radius:1rem;
+
+    font-family: inherit;
+    font-size: inherit;
+    float: left;
+    text-align: left;
+    margin: 0.4em;
+    padding: 0.4em;
+    text-decoration: none;
+    color: var(--text);
+    background-color: var(--btn)
+}
+
+fieldset {
+    border-color: rgb(0 0 0 / 28%);
+    border-style: solid;
+    border-width: 1px;
+    border-radius:1rem;
 }
