--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body {
     background-color: var(--bg);
 }
 
+* {
+    transition: background-color .3s ease, color .3s ease;
+}
+
 h1,
 h2,
 h3,
