🎨Change dark theme colors

--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@
 [theme="dark"] {
     --bg: #353941;
     --btn: #2c2f33;
-    --headers: #7289DA;
+    --headers: #516395;
     --text: #99AAB5;
-    --links: #7289DA;
+    --links: #614385;
     --contrast: #787f88;
 }
 
