🎨Change dark theme colors

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 [theme="dark"] {
     --bg: #353941;
     --btn: #2c2f33;
-    --headers: #516395;
+    --headers: #7289DA;
     --text: #99AAB5;
     --links: #614385;
     --contrast: #787f88;
